load image article

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     },
     "globals": {
         "localStorage": true,
-        "document": true
+        "document": true,
+        "FormDate":true
     }
 }
