--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,11 +6,12 @@
         "jsx-a11y/label-has-for": 0,
         "class-methods-use-this": 0,
         "react/jsx-filename-extension": 0,
-        "linebreak-style": 0
+        "linebreak-style": 0,
+        "prefer-promise-reject-errors": 0
     },
     "globals": {
         "localStorage": true,
         "document": true,
-        "FormDate":true
+        "FormData":true
     }
 }
